--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "prismjs": "^1.14.0",
         "recursive-copy": "^2.0.9",
         "tiny-glob": "0.2.1",
+        "xmlbuilder": "^10.1.1",
         "xss-filters": "1.2.7"
     }
 }
