--- a/package.json
+++ b/package.json
@@ -33,17 +33,17 @@
         "json-templater": "^1.2.0",
         "jsonfile": "^4.0.0",
         "load-json-file": "^5.0.0",
-        "lodash": "^4.17.13",
+        "lodash": "^4.17.21",
         "markdown-it": "8.4.1",
         "markdown-it-decorate": "1.2.2",
         "markdown-it-deflist": "2.0.3",
         "markdown-it-footnote": "3.0.1",
         "markdown-it-imsize": "2.0.1",
         "markdown-it-katex": "2.0.3",
-        "minimist": "1.2.0",
+        "minimist": "1.2.3",
         "mkdirp": "0.5.1",
         "pretty": "^2.0.0",
-        "prismjs": "^1.14.0",
+        "prismjs": ">=1.24.0",
         "recursive-copy": "^2.0.9",
         "tiny-glob": "0.2.1",
         "xmlbuilder": "^10.1.1",
